samples/_failures_safe/1761296129_9d522d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba0b261e.c: In function ‘main’:
./samples/SAFE/__tmp_ba0b261e.c:127:5: error: expected declaration or statement at end of input
  127 |     if (a.data == NULL) { printf("Matrix creation failed\n");
      |     ^~
./samples/SAFE/__tmp_ba0b261e.c:127:5: error: expected declaration or statement at end of input
